<resources>
    <string name="app_name">taskmanager3</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_details">Task Details</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="you_have_no_tasks">You have no tasks! 🎉\nEnjoy your day or add a new task</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>